# allstak-flutter

./: .pubignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pubspec.yaml
.github/workflows/: ci.yml
android/: README.md  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  allstak_crash.c
android/src/main/kotlin/io/allstak/flutter/: AllStakPlugin.kt
ios/: AllStakPlugin.swift  README.md  allstak_flutter.podspec
lib/: allstak.dart  allstak_flutter.dart  navigator_observer.dart  sanitizer.dart
lib/src/: dio_interceptor.dart  http_overrides.dart  log_bridge.dart  native_crash.dart  offline_queue.dart  session.dart
test/: allstak_flutter_test.dart  auto_instrumentation_test.dart  native_crash_test.dart  offline_queue_test.dart  sanitizer_test.dart
